# aima

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
ch02/: actuator.py  environment.py  sensor.py  vacuum_motion_penalty.py  vacuum_unknown_geog.py  vacuum_world.py  vacuum_world_score.py
ch02/agents/: model_based_reflex_agent.py  randomized_reflex_agent.py  reflex_vacuum_agent.py  simple_reflex_agent.py
ch02/modules/: environment.py
ch02/vacuum_world/: reflex_vacuum_agent.py
ch03/: __init__.py
ch03/algorithms/: __init__.py  best_first_search.py
ch03/data_structures/: __init__.py  node.py  priority_queue.py  queue.py
ch03/test/: test_best_first_search.py  test_priority_queue.py
src/: vacuum_motion_penalty.py  vacuum_unknown_geog.py  vacuum_world.py  vacuum_world_score.py
src/agents/: __init__.py  model_based_reflex_agent.py  randomized_reflex_agent.py  reflex_vacuum_agent.py  simple_reflex_agent.py
src/algorithms/: __init__.py  best_first_search.py  bibf_search.py  breadth_first_search.py  depth_limited_search.py  expand.py  iterative_deepening_search.py  recursive_best_first_search.py  ucs.py  vacuum_motion_penalty.py  vacuum_unknown_geog.py  vacuum_world.py  vacuum_world_score.py
src/data_structures/: __init__.py  actuator.py  environment.py  node.py  priority_queue.py  problem.py  sensor.py
test/: conftest.py  test_priority_queue.py  test_vacuum_world.py
test/algorithms/: test_best_first_search.py  test_bibf_search.py  test_breadth_first_search.py  test_depth_limited_search.py  test_iterative_deepening_search.py  (+2 more)
(+2 files in other folders)
