[project]
name = "aima"
version = "0.1.0"
description = "Implementation of the programming exercises from 'Artificial Intelligence: A Modern Approach' (4e) - Stuart J. Russell & Peter Norvig using Python 3.13"

readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = ["--import-mode=importlib"]
